# kana-noise

./: .gitignore  Makefile  README.md  pyproject.toml
misc/: download-ggml-model.sh
scripts/: extract.py
src/kana/: __init__.py
src/kana/pipeline/: batch.py  steps.py  utils.py
