[project]
name = "kana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.9.3",
    "audioread==3.0.1",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "cloudpickle==3.1.1",
    "coloredlogs==15.0.1",
    "decorator==5.2.1",
    "demucs==4.0.1",
    "diffq>=0.2.4",
    "dora-search==0.1.12",
    "einops==0.8.1",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fsspec==2025.7.0",
    "hf-xet==1.1.7",
    "huggingface-hub==0.34.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "julius==0.2.7",
    "lameenc==1.8.1",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "onnxruntime==1.22.1",
    "openunmix==1.3.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "panns-inference>=0.1.1",
    "platformdirs==4.3.8",
    "pooch==1.8.2",
    "protobuf==6.31.1",
    "pycparser==2.22",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "retrying==1.4.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "setuptools>=80.9.0",
    "six==1.17.0",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "submitit==1.5.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "tqdm==4.67.1",
    "treetable==0.2.5",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "webrtcvad==2.0.10",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

